# try-exciting-web-kamishibai

./: .gitignore  LICENSE  README.md  openapi.json  sync-and-check.sh  sync-and.check.sh
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: type-sync.yml
docs/: AGENT_RULES.md  API_V0.md  ARCHITECTURE.md  SCENARIO_SPEC.md
server/: README.md  pyproject.toml
server/app/: api_v0.py  assets.py  data.py  errors.py  main.py  models.py  projects.py  request_context.py  saves.py  scenario.py
server/app/engine/: __init__.py  executor.py  save_codec.py  types.py
server/schema/: save-data-v0.schema.json
server/tests/: test_api_v0_mvp.py  test_error_envelopes.py  test_health.py
server/tests/engine/: test_executor.py
server/tools/: export_openapi.py  scenario_linter.py  validate_shared_schema.py
shared/schema/: README.md  openapi.json  scenario-v0.schema.json
shared/schema/examples/: save-data.valid.json  scenario.valid.json
shared/specs/: asset-reference.md  save-data-v0.md  scenario-format-v0.md
static/: index.html
static/js/engine/: parseScenario.js  runtime.js  validateScript.js
static/js/renderers/: domRenderer.js
static/js/scenarios/: sample.js
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/types/: save-data-schema.d.ts  scenario-schema.d.ts  schema.d.ts
