[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kamishibai-server"
version = "0.1.0"
description = "FastAPI backend for the kamishibai v0 engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.27.0,<1.0.0",
]

[project.scripts]
kamishibai-api = "app.main:run"
kamishibai-export-openapi = "tools.export_openapi:main"
kamishibai-validate-shared-schema = "tools.validate_shared_schema:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
  "jsonschema>=4.22.0,<5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app", "app.engine", "tools"]
